syntax = "proto3";

package kessel.inventory.v1beta1;

import "kessel/inventory/v1beta1/metadata.proto";
import "kessel/inventory/v1beta1/reporter_data.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message RhelHost {
  // Metadata about this resource
  Metadata metadata = 1;

  // Write only reporter specific data
  ReporterData reporter_data = 245278792;
}
